<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="petagram.joseanguiano.com.veterinaria.Datos">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/datoconfirmar"
            android:textSize="@dimen/texto"
            android:id="@+id/txtconfirmar"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/datonombre"
            android:textSize="@dimen/texto"
            android:id="@+id/txtnombre"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/datofecha"
            android:textSize="@dimen/texto"
            android:id="@+id/txtfecha"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/datotelefono"
            android:textSize="@dimen/texto"
            android:id="@+id/txttelefono"
            android:layout_marginTop="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/datoemail"
            android:textSize="@dimen/texto"
            android:id="@+id/txtemail"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/datodescripcion"
            android:textSize="@dimen/texto"
            android:id="@+id/txtdescripcion"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btneditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botoneditar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margintop"
            android:textSize="@dimen/texto"
            android:onClick="pasar"/>
    </LinearLayout>
</RelativeLayout>
